<resources>
    <string name="app_name">Projeto_Boostcamp</string>
    <string name="scroll_view">Nesta tela, é possível rolar para ver o conteúdo </string>
    <string name="image_button">Botão para voltar à tela inicial com os restaurantes.</string>
    <string name="image_view_yakisoba">Imagem do Yakisoba</string>
    <string name="image_capa_china_in_box">Capa do China in Box</string>
    <string name="combo_com_desconto">Combo com Desconto</string>
    <string name="combo_yakisoba">Combo Yakisoba Bowl + Coca-Cola lata (normal ou sem açúcar)</string>
    <string name="descricao_yakisoba">O Yakisoba mais pedido em um novo formato, macarrão oriental, com carne e frango. Acompanhado por legumes frescos (cenoura, brócolis, acelga, repolho) e cogumelos, finalizados com molho à base de shoyu. Alérgicos, nosso molho contém crustáceo, peixe, soja e derivados. Pode conter trigo, ovos e leite 400g + Coca-Cola lata (normal ou sem açúcar).</string>
    <string name="logo_china_in_box">Logo do China in Box</string>
    <string name="desconto_yakisoba">R$ 39,90</string>
    <string name="valor_original_yakisoba"><strike>R$ 47,80</strike></string>
    <string name="nome_china_in_box">China in Box</string>
    <string name="restaurante">Restaurante</string>
    <string name="destaques">Destaques</string>
    <string name="destaque_1">Destaque 1</string>
    <string name="desconto_progressivo_escolha_3_pratos_com_30_de_desconto">Desconto progressivo, escolha 3 pratos com 30% de desconto</string>
    <string name="escolha_3_pratos">Escolha 3 pratos com 30% de desconto</string>
    <string name="valor_desconto_do_3_pratos">R$ 74,90</string>
    <string name="valor_original_do_3_pratos"><strike>R$ 107,70</strike></string>
    <string name="frango_crispy">Frango Crispy Grande + Frango Empanado Grande + Frango a Passarinho Grande</string>
    <string name="descricao_frango_cripsy">Pedaços de coxa e sobrecoxa de frango com uma.....</string>
    <string name="serve_4_pessoas">Serve 4 pessoas</string>
    <string name="desconto_frango">R$ 157,40</string>
    <string name="valor_original_frango"><strike>R$ 202,70</strike></string>
    <string name="macarrao_oriental">Macarrão Oriental Iscas de frango + Coca-Cola</string>
    <string name="descricao_macarrao">Macarrão com molho à base de shoyu cobertos com iscas de frango levemente apimentadas by Seara e cebolinha picada. Alérgicos nosso molho contém crustáceo, peixe, soja e derivados. Pode conter trigo, ovos e leite. + Coca-Cola lata (normal ou zero açúcar)</string>
    <string name="serve_1_pessoa">Serve 1 pessoa</string>
    <string name="preco_original_macarrao">R$ 46,80</string>
    <string name="txt_description_opcionais">Escolha de 1 a 2</string>
    <string name="txt_nome_produto">Yakisoba clássico</string>
    <string name="txt_descricao_produto">Nosso delicioso macarrão oriental</string>
    <string name="txt_nome_item_produto">Yakisoba Clássico grande - 900g</string>
    <string name="txt_valor_item_opcionais">+R$ 68,90</string>
    <string name="txt_titulo_login">Falta pouco para matar\nsua fome</string>
    <string name="txt_input_email">Digite seu e-mail</string>
    <string name="btn_entrar">Entrar</string>
    <string name="txt_input_senha">Digite sua senha</string>
    <string name="nome_usuario">Jamilton</string>
    <string name="ver_meu_clube">Ver meu clube</string>
    <string name="titulo_doofi">Conheça o novo app Doofi</string>
    <string name="descricao_doofi">Diversão e prêmios em saldo na carteira IFood</string>
    <string name="novo">NOVO!</string>
    =======
    <string name="imagem_opcional_rv">imagem opcional rv</string>
    <string name="btn_mais">botão de mais</string>
    <string name="btn_menos">botão de menos</string>
    <string name="numero_vezes">1</string>
    <string name="escolha_opções">Opções</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="image_btn_mais">botão de mais</string>
    <string name="image_btn_menos">Botão menos</string>
    <string name="text_valor_final">R$180,50</string>
    <string name="text_numero_itens">1</string>
    <string name="text_descricao_valor">a partir de R$ 49,90</string>
    <string name="txt_comidas">Comidas</string>
</resources>