<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_titulo_produto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/txt_nome_item_produto"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_detalhe_produto" />

    <TextView
        android:id="@+id/text_preco_produto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_valor_item_opcionais"
        android:textColor="#616161"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_detalhe_produto"
        app:layout_constraintEnd_toEndOf="@+id/text_titulo_produto"
        app:layout_constraintStart_toStartOf="@+id/text_titulo_produto"
        app:layout_constraintTop_toBottomOf="@+id/text_titulo_produto"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:contentDescription="@string/btn_mais"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/image_detalhe_produto"
        app:layout_constraintStart_toEndOf="@+id/image_detalhe_produto"
        app:layout_constraintTop_toTopOf="@+id/image_detalhe_produto"
        app:srcCompat="@drawable/ic_remove"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/btn_menos"
        app:layout_constraintBottom_toBottomOf="@+id/text_quantidade_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_quantidade_produto"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_quantidade_produto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/numero_vezes"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <ImageView
        android:id="@+id/image_detalhe_produto"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/arredondar_imagens_opcional"
        android:clipToOutline="true"
        android:contentDescription="@string/imagem_opcional_rv"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yakisoba_bowl"
        tools:targetApi="31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>