<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scroll_view"
    android:fillViewport="true"
    tools:context=".presentation.detalhes_restaurantes.DetailsRestaurantsActivity">



        <ImageView
            android:id="@+id/image_view_capa_china_in_box"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_capa_china_in_box"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/china_in_box_capa" />

        <ImageButton
            android:id="@+id/image_btn_voltar_inicial"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/fundo_voltar_para_tela_inicial"
            android:contentDescription="@string/image_button"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/voltar_para_tela_inicial_restaurantes" />

        <ImageView
            android:id="@+id/image_view_logo_china_in_box"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/fundo_china_in_box"
            android:clipToOutline="true"
            android:contentDescription="@string/logo_china_in_box"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_capa_china_in_box"
            app:srcCompat="@drawable/loja_1"
            tools:targetApi="31" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.56" />

        <TextView
            android:id="@+id/text_view_nome_china_in_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/nome_china_in_box"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_view_logo_china_in_box" />

        <TextView
            android:id="@+id/text_view_restaurante"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/restaurante"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_nome_china_in_box"
            app:layout_constraintTop_toBottomOf="@+id/text_view_nome_china_in_box" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
